--- a/templates/applications/signup.html
+++ b/templates/applications/signup.html
@@ -40,12 +40,12 @@
                 <div class="card shadow-lg border-0">
                     <div class="card-body p-4">
                         <h2 class="text-center mb-4">Create New Account</h2>
-                        <form method="post">
-                            {% csrf_token %}
-                            {{ crispy_form|crispy }}
-                            <button type="submit" class="btn btn-success w-100 mt-3">Register</button>
-                            <div class="cf-turnstile" data-sitekey="0x4AAAAAACNqqB5iWIporXcf" data-theme="light" data-size="normal" data-callback="onSuccess"></div>
-                        </form>
+                         <form method="post" action="{% url 'applications:signup' %}">
+                             {% csrf_token %}
+                             {{ crispy_form|crispy }}
+                             <button type="submit" class="btn btn-success w-100 mt-3">Register</button>
+                             <div class="cf-turnstile" data-sitekey="0x4AAAAAACNqqB5iWIporXcf"></div>
+                         </form>
 
                         <hr class="my-4">
 
