--- a/templates/applications/login.html
+++ b/templates/applications/login.html
@@ -9,8 +9,16 @@
 
     <!-- Bootstrap CSS (via CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="preconnect" href="https://challenges.cloudflare.com">
     <style>
+        
+        .cf-turnstile {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+        }
+
+
         /* Extra mobile tweaks */
         @media (max-width: 576px) {
             .card {
@@ -75,6 +83,7 @@
                             <div class="text-center">
                                 <a href="{% url 'applications:signup' %}" class="btn btn-success btn-lg">Create New Account</a>
                             </div>
+                            <div class="cf-turnstile" data-sitekey="0x4AAAAAACNqqB5iWIporXcf"></div>
                         </form>
                     </div>
                 </div>
@@ -86,5 +95,6 @@
 
     <!-- Bootstrap JS (via CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
 </html>
