--- a/templates/applications/continue_application.html
+++ b/templates/applications/continue_application.html
@@ -164,5 +164,31 @@ document.addEventListener("DOMContentLoaded", function () {
   if (idCardInput) idCardInput.addEventListener("change", () => previewFile(idCardInput, "idCardPreview"));
   if (photoInput) photoInput.addEventListener("change", () => previewFile(photoInput, "profilePhotoPreview"));
 });
+
+document.addEventListener("DOMContentLoaded", function() {
+  const instSelect = document.getElementById("id_institution");
+  const courseSelect = document.getElementById("id_course");
+
+  instSelect.addEventListener("change", function() {
+    const instId = this.value;
+    courseSelect.innerHTML = '<option value="">Loading courses...</option>';
+
+    if (instId) {
+      fetch(`/api/courses/?institution_id=${instId}`)
+        .then(response => response.json())
+        .then(data => {
+          courseSelect.innerHTML = '<option value="">-- Select Course --</option>';
+          data.forEach(course => {
+            courseSelect.innerHTML += `<option value="${course.id}">${course.name} (${course.code})</option>`;
+          });
+        })
+        .catch(() => {
+          courseSelect.innerHTML = '<option value="">Error loading courses</option>';
+        });
+    } else {
+      courseSelect.innerHTML = '<option value="">-- Select Course --</option>';
+    }
+  });
+});
 </script>
 {% endblock %}
