--- a/templates/applications/lookup.html
+++ b/templates/applications/lookup.html
@@ -99,4 +99,33 @@
     </div>
   </div>
 </div>
+<script>
+  
+  document.addEventListener("DOMContentLoaded", function() {
+  const instSelect = document.getElementById("id_institution");
+  const courseSelect = document.getElementById("id_course");
+
+  instSelect.addEventListener("change", function() {
+    const instId = this.value;
+    courseSelect.innerHTML = '<option value="">Loading courses...</option>';
+
+    if (instId) {
+      fetch(`/api/courses/?institution_id=${instId}`)
+        .then(response => response.json())
+        .then(data => {
+          courseSelect.innerHTML = '<option value="">-- Select Course --</option>';
+          data.forEach(course => {
+            courseSelect.innerHTML += `<option value="${course.id}">${course.name} (${course.code})</option>`;
+          });
+        })
+        .catch(() => {
+          courseSelect.innerHTML = '<option value="">Error loading courses</option>';
+        });
+    } else {
+      courseSelect.innerHTML = '<option value="">-- Select Course --</option>';
+    }
+  });
+});
+
+</script>
 {% endblock %}
