update scan summary
views under create application

--- a/templates/applications/application_form.html
+++ b/templates/applications/application_form.html
@@ -330,7 +330,7 @@
       <li>Valid ID card(<em>Driver's Licence, NID, Birth Certificate</em>)</li>
       <li>Statutory declaration</li>
     </ul>
-    <h2>Required Documents For New Applicants 2026</h2>
+    <h2>Required Documents For Returning Applicants 2026</h2>
     <ul>
         <li>Transcript(<em>has to be latest Semester 2 - 2025</em>)</li>
         <li>School ID Card</li>
