Update to one file field

--- a/templates/applications/application_form.html
+++ b/templates/applications/application_form.html
@@ -267,31 +267,14 @@
                                 {{ app_form.year_of_study|as_crispy_field }}
                             </div>
 
-                            <h5 class="mt-4">Required Documents</h5>
-                            <div class="col-md-6">
-                                {{ app_form.grade_12_certificate|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.transcript|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.acceptance_letter|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.school_fee_structure|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.id_card|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.character_reference_1|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.character_reference_2|as_crispy_field }}
-                            </div>
-                            <div class="col-md-6">
-                                {{ app_form.statdec|as_crispy_field }}
-                            </div>
+                    <h5 class="mt-4">Required Documents</h5>
+
+                    <div class="col-md-12">
+                       {{ app_form.documents_pdf|as_crispy_field }}
+                           <small class="text-muted">
+                            Upload all required documents as <strong>one PDF file</strong>.
+                          </small>
+                        </div>
 
                         </div>
                     </div>
@@ -332,7 +315,7 @@
     </ul>
     <h2>Required Documents For Returning Applicants 2026</h2>
     <ul>
-        <li>Transcript(<em>has to be latest Semester 2 - 2025</em>)</li>
+        <li>Transcript(<em>has to be latest Semester 2 - 2025</em>)</li> 
         <li>School ID Card</li>
         <li><strong>You are asked to close this window and apply, insert your first and last name, click the lookup to see if your name exists and proceed to the application form. </strong> </li>
     </ul>
