--- a/templates/applications/continuing_application_form.html
+++ b/templates/applications/continuing_application_form.html
@@ -94,20 +94,20 @@
                                        readonly>
                             </div>
 
-                            <!-- Editable -->
-                            <div class="col-md-4">
-                                {{ form.year_of_study|as_crispy_field }}
-                            </div>
+<!-- Editable -->
+<div class="col-md-4">
+    {{ form.year_of_study|as_crispy_field }}
+</div>
 
-                            <h5 class="mt-4">Required Documents</h5>
+<h5 class="mt-4">Required Documents</h5>
 
-                            <div class="col-md-6">
-                                {{ form.transcript|as_crispy_field }}
-                            </div>
+<div class="col-md-12">
+    {{ form.documents_pdf|as_crispy_field }}
+    <small class="text-muted">
+        Upload all required documents as <strong>one PDF</strong> (max 10MB).
+    </small>
+</div>
 
-                            <div class="col-md-6">
-                                {{ form.id_card|as_crispy_field }}
-                            </div
 
                             </div>
                         </div>
